--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
+<!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
         <title>Hello coursera</title>
     </head>
     <body>
-        <h1>Hello Coursera Students!</h1>
+        <h1>Hello Coursera Students! I am thrilled about this course</h1>
     </body>
 </html>
