--- a/mod3-solution/foundItems.html
+++ b/mod3-solution/foundItems.html
@@ -1,6 +1,6 @@
 <ol>
   <li ng-repeat="item in items">
-    <b>{{item.name}}</b> - {{ item.description }}
+    <b>{{item.name}}</b> <span class="badge">{{item.short_name}}</span> - {{ item.description }}
     <button class="btn btn-danger" ng-click="onRemove({index: $index});">Don't want this one!</button>
   </li>
 </ol>
